# alarm

./: Cargo.toml  Cross.toml  Readme.md  alarm.desktop  crosscomp.sh  deploy.sh  install.sh
src/: api.rs  clock.rs  elements.rs  main.rs  style.rs
