[package]
name = "alarm"
version = "0.1.0"
authors = ["dskleingeld <11743287+dskleingeld@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
pinephone = ["iced/glow_OpenGL2ES"]

[dependencies]
iced = { git= "https://github.com/dskleingeld/iced", features = ["glow", "tokio"] }
chrono = "0.4"
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1"
reqwest = { version = "0.11", features = [ "rustls-tls" ] }
thiserror = "1"
bincode = "1.3"
serde = "1"
