[package]
name = "alarm"
version = "0.1.0"
authors = ["dskleingeld <11743287+dskleingeld@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
pinephone = ["iced/glow_OpenGL2ES"]

[dependencies]
iced = { git= "https://github.com/dskleingeld/iced", rev="3187850", features = ["glow", "tokio"] }
iced_native = { git= "https://github.com/dskleingeld/iced", rev="3187850" }
chrono = "0.4"
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1"
reqwest = { version = "0.11", features = [ "rustls-tls" ], default-features = false}
thiserror = "1"
bincode = "1.3"
serde = "1"
tokio = { version = "1.2", features = [ "macros" ] }

[profile.release]
lto = "fat"
codegen-units = 1

